<resources>
    <string name="app_name">Volunteer Panel</string>

    <!--    <string name="app_name">Volunteer Dashboard</string>-->

    <!--login strings-->
    <string name="login">Login Here!</string>
    <string name="login_msg">Welcome Back,\n Great To See You Again!</string>
    <string name="login_button">Login Now!</string>
    <string name="login_forget_password">forget Password?</string>
    <string name="login_new_account">Create New Account!</string>
    <!--forget password fields-->
    <string name="forget">Forget Password</string>
    <string name="forget_msg">Forgot Password?\nDon\'t Worry, Make A New one Here!</string>
    <string name="forget_button">Reset Password!</string>

    <!-- main page/dashboard-->
    <string name="main_Title">Welcome User!</string>
    <string name="main_msg">Welcome to the volunteer panel,\n Here you can perform the intended task regarding the event management in your college.</string>

    <!--Common fields-->
    <string name="username">Name</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">your user name</string>
    <string name="nav_header_subtitle">your email id</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Update Profile</string>
    <string name="menu_slideshow">Log Out!</string>
    <string name="title_activity_main2">MainActivity2</string>
</resources>