<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".Forget_Password">


    <TextView
        style="@style/textView_30"
        android:text="@string/forget"
        android:layout_marginTop="@dimen/_30sdp"
        />

    <TextView
        style="@style/textView_15"
        android:text="@string/forget_msg"
        />

    <EditText
        android:id="@+id/forget_email"
        style="@style/editText"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/_5sdp"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/_30sdp"/>

    <Button
        style="@style/button_20"
        android:id="@+id/verify_button"
        app:backgroundTint="@null"
        android:text="Verify Email!"
        android:layout_marginTop="@dimen/_30sdp"
        />

    <EditText
        android:id="@+id/forget_password"
        style="@style/editText"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="@dimen/_5sdp"
        android:visibility="gone"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/_12sdp"/>
   
    <EditText
        android:id="@+id/forget_confirm_password"
        style="@style/editText"
        android:drawableStart="@drawable/ic_email"
        android:visibility="gone"
        android:inputType="textPassword"
        android:drawablePadding="@dimen/_5sdp"
        android:hint="@string/confirm_password"
        android:layout_marginTop="@dimen/_12sdp"/>
   
    <Button
        style="@style/button_20"
        android:id="@+id/forget_button"
        android:visibility="gone"
        app:backgroundTint="@null"
        android:text="@string/forget_button"
        android:layout_marginTop="@dimen/_30sdp"
        />
</LinearLayout>