<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            style="@style/textView_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Volunteer"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/new_red"
            android:layout_marginBottom="24dp" />

        <EditText
            android:id="@+id/volunteer_name"
            style="@style/editText"
            android:hint="@string/username"
            android:drawableStart="@drawable/ic_name"
            android:drawablePadding="@dimen/_5sdp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/custom_border"
            />
        <EditText
            android:id="@+id/volunteer_contact"
            style="@style/editText"
            android:hint="@string/contact"
            android:inputType="phone"
            android:drawableStart="@drawable/ic_call"
            android:drawablePadding="@dimen/_5sdp"
            android:maxLength="10"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/custom_border"
            />
        <EditText
            android:id="@+id/volunteer_email"
            style="@style/editText"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/custom_border"
            />
        <EditText
            android:id="@+id/volunteer_password"
            style="@style/editText"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/_5sdp"
            android:inputType="textPassword"
            android:background="@drawable/custom_border"
            />

        <Button
            android:id="@+id/volunteer_button"
            style="@style/button_20"
            android:text="Add Volunteer!"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:backgroundTint="@null"
            android:background="@drawable/custom_button"
            />
    </LinearLayout>
</ScrollView>